src-ken&y/objects/FOB_Terms__c.object
<CustomObject>
    <customHelpPage>HelpFOBTerms</customHelpPage>
    <description>Table that holds the FOB Terms</description>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FOB_Point__c</fullName>
        <label>FOB Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Origin</fullName>
                </value>
                <value>
                    <fullName>Destination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight</label>
        <type>Checkbox</type>
    </fields>
    <label>FOB Term</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FOB Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FOB Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>